Feature/whitelist addressess (#22)
* feat(Whitelist address): should get whitelist addresses from Google Cloud Datastore

* feat(WhitelistedAddresses): Amadeus should only allow whitelisted addresses to be used in the system.

* feat(whitelist): it should be able to not require whitelist addresses at all
