# src/server/middleware/routes/routes.ts
@@ -89,12 +89,12 @@ export function RegisterRoutes(app: any) {
     app.get('/api/v0/orders',
         function(request: any, response: any, next: any) {
             const args = {
+                taker: { "in": "query", "name": "taker", "required": true, "dataType": "string" },
                 exchangeContractAddress: { "in": "query", "name": "exchangeContractAddress", "dataType": "string" },
                 tokenAddress: { "in": "query", "name": "tokenAddress", "dataType": "string" },
                 makerTokenAddress: { "in": "query", "name": "makerTokenAddress", "dataType": "string" },
                 takerTokenAddress: { "in": "query", "name": "takerTokenAddress", "dataType": "string" },
                 maker: { "in": "query", "name": "maker", "dataType": "string" },
-                taker: { "in": "query", "name": "taker", "dataType": "string" },
                 trader: { "in": "query", "name": "trader", "dataType": "string" },
                 feeRecipient: { "in": "query", "name": "feeRecipient", "dataType": "string" },
                 page: { "in": "query", "name": "page", "dataType": "integer", "validators": { "isInt": { "errorMsg": "page" }, "minimum": { "value": 1 } } },
